Fixing web buidl

--- a/src/Makefile
+++ b/src/Makefile
@@ -37,7 +37,7 @@ ifeq ($(PLATFORM),PLATFORM_DESKTOP)
     PROJECT_SOURCE_FILES += libload.c
 endif
 ifeq ($(PLATFORM),PLATFORM_WEB)
-    PROJECT_SOURCE_FILES += game/_scene_editor.c game/_scene_start.c game/dusk-gui.c game/main.c game/scene.c game/scriptactions.c game/scriptsystem.c game/util.c game/level.c game/cjson.c game/level_components.c game/_scene_intro_scene.c
+    PROJECT_SOURCE_FILES += game/_scene_editor.c game/_scene_start.c game/dusk-gui.c game/main.c game/scene.c game/scriptactions.c game/scriptsystem.c game/util.c game/level.c game/cjson.c game/level_components.c game/_scene_intro_scene.c game/_scene_island.c game/_scene_puzzle_1.c game/_scene_puzzle_2.c game/_scene_puzzle_3.c
 endif
 
 # raylib library variables
